# SFMLFlappyBIrd

./: CMakeLists.txt  readme.md
Audio/: AssetManager.cpp  DEFINITIONS.h  GameOverState.cpp  GameState.cpp  GameState.h  Pipe.cpp  State.h  main.cpp
Bird/: Bird.cpp  Bird.h  CMakeLists.txt  DEFINITIONS.h  Game.cpp  GameState.cpp  GameState.h  InputManager.cpp  InputManager.h  Land.cpp  Land.h  MainMenuState.cpp  Pipe.cpp
Collision/: Bird.cpp  Bird.h  CMakeLists.txt  Collision.cpp  Collision.h  DEFINITIONS.h  GameState.cpp  GameState.h  Land.cpp  Land.h  Pipe.cpp
Engine/: AssetManager.cpp  Game.h  main.cpp
FlashScreen/: AssetManager.h  Bird.h  CMakeLists.txt  Collision.h  GameOverState.h  GameState.cpp  GameState.h  Pipe.h  SplashState.cpp
GameOver&Score/: Collision.cpp  DEFINITIONS.h  Flash.cpp  Game.cpp  GameOverState.cpp  GameOverState.h  GameState.cpp  GameState.h  HUD.cpp  MainMenuState.cpp  Pipe.h  SplashState.h
MainMenu&GameState/: CMakeLists.txt  DEFINITIONS.h  GameState.cpp  GameState.h  MainMenuState.cpp
Modifications/: AssetManager.cpp  AssetManager.h  Bird.cpp  CMakeLists.txt  DEFINITIONS.h  Flash.h  Game.h  GameOverState.cpp  GameState.cpp  GameState.h  HUD.cpp  InputManager.cpp  InputManager.h  Land.cpp  MainMenuState.cpp  MainMenuState.h  Pipe.cpp  SplashState.cpp  StateMachine.cpp  StateMachine.h
Pipe/: AssetManager.cpp  CMakeLists.txt  DEFINITIONS.h  GameOverState.cpp  GameState.cpp  GameState.h  MainMenuState.h  Pipe.cpp  Pipe.h
Score/: DEFINITIONS.h  GameOverState.cpp  GameState.cpp  HUD.h  SplashState.cpp
SpalshState/: AssetManager.cpp  (+6 more)
